deployments/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-flask-app
  template:
    metadata:
      labels:
        app: my-flask-app
    spec:
      containers:
        - name: my-flask-app
          image: poridhi/flask-app:v0.0.1
          ports:
            - containerPort: 80
