deployments/ingress-flask.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-flask-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: matrix.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-flask-app
                port:
                  number: 80
